[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0", features = ["headers", "ws"]}
# hyper = { version = "0", features = ["full"] }
tokio = { version = "1", features = ["macros", "rt"] }
# tower = "0"
serde_json = "1.0"
serde= { version = "1.0", features = ["derive"] }
database = { path = "../database" }
migrator = { path = "../migrator" }
