[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0", features = ["headers", "ws", "http2"]}
axum-macros="0"
# hyper = { version = "0", features = ["full"] }
tokio = { version = "1", features = ["macros", "rt", "tracing"] }
console-subscriber = "0"
# tower = "0"
serde_json = "1.0"
serde= { version = "1.0", features = ["derive"] }
database = { path = "../database" }
migrator = { path = "../migrator" }
jsonwebtoken = "8"
sha2 = "0"
pwhash="1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3.0", features = ["limit", "trace", "cors"] }
futures="0"
axum-ws-rooms="0.4"
chrono = "0.4.23"
